iceberg/iceberg-handler/src/test/queries/negative/create_iceberg_table_failure.q
set hive.vectorized.execution.enabled=true;
CREATE EXTERNAL TABLE ice_t (i int, s string, ts timestamp, d date) STORED BY 'org.apache.iceberg.mr.hive.HiveIcebergStorageHandler';